# rp2040-rotary-encoder

./: README.md  build.sh
driver/: CMakeLists.txt  button.cpp  button.pio  encoder.cpp  quadrature_encoder.pio
driver/include/: button.h  encoder.h
example/: CMakeLists.txt  main.cpp
